--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,15 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/10/05 3.7 beta4
+	2022/10/11 3.7 beta4
 
 	mmload命令でメモリストリームからの読み込みに失敗することがある不具合を修正
 	noteadd命令の引数でnotefind関数を使用した場合に書き込み内容が壊れる不具合を修正
 	mes/print命令による表示が1023文字で強制的に改行される不具合を修正
 	[HSP3Dish] mes/print命令の改行処理が標準ランタイムと異なる不具合を修正
 	[HSP3Dish][Windows] mes/print命令の空白に不要なピクセルが含まれる不具合を修正
+	[HGIMG4] gpmatprm2命令を追加、テクスチャのUVオフセット/リピート指定を追加
+	[HGIMG4] マテリアル生成オプションにGPOBJ_MATOPT_UVOFFSET,GPOBJ_MATOPT_UVREPEATを追加
 	[HGIMG4] オフスクリーンのスプライト描画時のために解像度を再設定するes_screen命令を追加
 	[HGIMG4] setobjlight命令でライトが反映されないモデルがある不具合を修正
 	[HGIMG4] シェーダーソースの先頭にある#versionディレクティブを維持するように修正
