--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/10/21 3.7 beta4
+	2022/10/23 3.7 beta4
 
+	hspoggプラグインの.oggファイル再生をオンメモリに切り替えpackfileに対応
 	celload命令のパラメーターに既存の画像を再利用するオプションを追加
 	mmload命令でメモリストリームからの読み込みに失敗することがある不具合を修正
 	noteadd命令の引数でnotefind関数を使用した場合に書き込み内容が壊れる不具合を修正
