--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/10/23 3.7 beta4
+	2022/11/01 3.7 beta4
 
 	hspoggプラグインの.oggファイル再生をオンメモリに切り替えpackfileに対応
 	celload命令のパラメーターに既存の画像を再利用するオプションを追加
@@ -15,6 +15,7 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 	[HSP3Dish] mes/print命令の改行処理が標準ランタイムと異なる不具合を修正
 	[HSP3Dish][Windows] screen命令によるサイズ変更でウインドウの入力が反映されなくなる不具合を修正
 	[HSP3Dish][Windows] mes/print命令の空白に不要なピクセルが含まれる不具合を修正
+	[HGIMG4] gpnodeinfo命令にノードのマテリアル情報を取得するオプションを追加
 	[HGIMG4] resフォルダ以下のテクスチャ読み込みに失敗した場合カレントフォルダも参照するように修正
 	[HGIMG4] gpbconvツールのプレビュー機能を実装
 	[HGIMG4] gpbconvツールに別ファイルアニメーションの参照機能を追加
