--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -16,6 +16,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 	[HSP3Dish][Windows] input命令で一部の記号入力が反映されなかった不具合を修正
 	[HSP3Dish][Windows] screen命令によるサイズ変更でウインドウの入力が反映されなくなる不具合を修正
 	[HSP3Dish][Windows] mes/print命令の空白に不要なピクセルが含まれる不具合を修正
+	[HGIMG4] クローンされたノードが半透明表示できなかった不具合を修正
+	[HGIMG4] ヘルプに記載されたgpsetprmon/gpsetprmoff命令が使用できなかった不具合を修正
+	[HGIMG4] event_pos命令の補間オプションでデフォルト値がHGIMG3と異なる(リニア)だった不具合を修正
+	[HGIMG4] event_pos系命令の補間オプション+16でワーク値が参照されない不具合を修正
 	[HGIMG4] gpdraw命令に物理オブジェクトのデバッグ表示を行うオプションを追加
 	[HGIMG4] gpnodeinfo命令にノードのマテリアル情報を取得するオプションを追加
 	[HGIMG4] resフォルダ以下のテクスチャ読み込みに失敗した場合カレントフォルダも参照するように修正
