--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -14,6 +14,7 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 	mes/print命令による表示が1023文字で強制的に改行される不具合を修正
 	[HSP3Dish] mes/print命令の改行処理が標準ランタイムと異なる不具合を修正
 	[HSP3Dish] 使用するテクスチャの上限数が512までだった制限を撤廃
+	[HSP3Dish][hsp3js] 連続する空白を含む文字列表示の横幅がずれる不具合を修正(zakki)
 	[HSP3Dish][Windows] input命令で一部の記号入力が反映されなかった不具合を修正
 	[HSP3Dish][Windows] screen命令によるサイズ変更でウインドウの入力が反映されなくなる不具合を修正
 	[HSP3Dish][Windows] mes/print命令の空白に不要なピクセルが含まれる不具合を修正
