--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2022/12/12 3.7 beta5
+
+	[HSP3Dish][dotfw] BGのスクロールが正しく動作しない不具合を修正
+
 	2022/12/01 3.7 beta4
 
 	hspoggプラグインの.oggファイル再生をオンメモリに切り替えpackfileに対応
