--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/12/12 3.7 beta5
+	2022/12/13 3.7 beta5
 
-	[HSP3Dish][dotfw] BGのスクロールが正しく動作しない不具合を修正
+	[HSP3Dish][dotfw] 背景としてBGマップを設定できるように修正
+	[HSP3Dish][dotfw] 背景のスクロールが正しく動作しない不具合を修正
 
 	2022/12/01 3.7 beta4
 
