--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,8 +7,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 	2022/12/13 3.7 beta5
 
+	[HSP3Dish] 標準スプライトのBGマップを描画する際にセルNo.0はスキップするように修正
 	[HSP3Dish][dotfw] 背景としてBGマップを設定できるように修正
 	[HSP3Dish][dotfw] 背景のスクロールが正しく動作しない不具合を修正
+	[HSP3Dish][Windows] dialog命令によるコモンダイアログの呼び出しに対応(Windowsのみ)
 
 	2022/12/01 3.7 beta4
 
