[HSP3Dish] picload/celload命令実行後に画像サイズが正しく反映されないことがある不具合を修正
Former-commit-id: 5e304fc2b6272f561041c7d00eb172866dc02350

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,12 +1,13 @@
 ------------------------------------------------------------------------------
 Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2022 (c) onion software  
+更新履歴                              copyright 1997-2023 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2022/12/13 3.7 beta5
+	2023/01/05 3.7 beta5
 
+	[HSP3Dish] picload/celload命令実行後に画像サイズが正しく反映されないことがある不具合を修正
 	[HSP3Dish] 標準スプライトのBGマップを描画する際にセルNo.0はスキップするように修正
 	[HSP3Dish][dotfw] 背景としてBGマップを設定できるように修正
 	[HSP3Dish][dotfw] 背景のスクロールが正しく動作しない不具合を修正
